// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Filter Popover Default 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c1 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c1:hover {
  box-shadow: none;
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1 > .icon {
  color: rgba(0,0,0,0.32);
}

.c1:hover,
.c1:focus {
  color: #3498db;
  border-color: #3498db;
}

.c1:hover > .icon,
.c1:focus > .icon {
  color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 trigger"
      fontSize="14px"
      fontWeight="normal"
      size="SMALL"
      type="NEUTRAL"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(6px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover With value set 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  color: #3498db;
  border-color: #3498db;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c1 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c1:hover {
  box-shadow: none;
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1 > .icon {
  color: rgba(0,0,0,0.32);
}

.c1 > .icon {
  color: #3498db;
}

.c1:hover,
.c1:focus {
  color: #3498db;
  border-color: #3498db;
}

.c1:hover > .icon,
.c1:focus > .icon {
  color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 trigger"
      fontSize="14px"
      fontWeight="normal"
      size="SMALL"
      type="NEUTRAL"
    >
      Filter
      <div
        className="icon"
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M22 12c0 5.523-4.478 10-10 10-5.523 0-10-4.477-10-10C2 6.478 6.477 2 12 2c5.522 0 10 4.478 10 10zm-11.397 1.984l-1.38-1.447a1 1 0 00-1.447 1.38l2.166 2.273a1 1 0 001.503-.063l4.834-6a1 1 0 00-1.558-1.254l-4.118 5.111z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(6px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover With value set and custom Cancel label and handler 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  color: #3498db;
  border-color: #3498db;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c1 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c1:hover {
  box-shadow: none;
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1 > .icon {
  color: rgba(0,0,0,0.32);
}

.c1 > .icon {
  color: #3498db;
}

.c1:hover,
.c1:focus {
  color: #3498db;
  border-color: #3498db;
}

.c1:hover > .icon,
.c1:focus > .icon {
  color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 trigger"
      fontSize="14px"
      fontWeight="normal"
      size="SMALL"
      type="NEUTRAL"
    >
      Filter
      <div
        className="icon"
        style={
          Object {
            "marginLeft": 8,
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M22 12c0 5.523-4.478 10-10 10-5.523 0-10-4.477-10-10C2 6.478 6.477 2 12 2c5.522 0 10 4.478 10 10zm-11.397 1.984l-1.38-1.447a1 1 0 00-1.447 1.38l2.166 2.273a1 1 0 001.503-.063l4.834-6a1 1 0 00-1.558-1.254l-4.118 5.111z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(6px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover extended style 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c2 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c2:hover {
  box-shadow: none;
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  background: lightcyan;
  padding: 16px;
}

.c1 .trigger {
  -webkit-transform: rotate(0.5turn);
  -ms-transform: rotate(0.5turn);
  transform: rotate(0.5turn);
}

.c1 .formWrapper {
  background: lavender;
}

<div
  className="c0 c1"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c2 trigger"
      fontSize="14px"
      fontWeight="normal"
      size="SMALL"
      type="NEUTRAL"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(6px)",
          }
        }
      >
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover formContent as a function 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c1 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c1:hover {
  box-shadow: none;
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1 > .icon {
  color: rgba(0,0,0,0.32);
}

.c1:hover,
.c1:focus {
  color: #3498db;
  border-color: #3498db;
}

.c1:hover > .icon,
.c1:focus > .icon {
  color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="c0"
  width="auto"
>
  <div
    className="popover__trigger"
    id="trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <button
      className="c1 trigger"
      fontSize="14px"
      fontWeight="normal"
      size="SMALL"
      type="NEUTRAL"
    >
      Filter
      <div
        className="icon right-icon"
        style={
          Object {
            "transform": "translateX(6px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="2 2 20 20"
            width="1em"
          >
            <path
              d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Popover zIndex 1`] = `
Array [
  .c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 32px;
  min-width: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: none;
  color: #2f313a;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #2f313a;
  padding: 0 10px 0 8px;
  font-size: 14px;
  font-weight: normal;
}

.c1 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c1:hover {
  box-shadow: none;
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1 > .icon {
  color: rgba(0,0,0,0.32);
}

.c1:hover,
.c1:focus {
  color: #3498db;
  border-color: #3498db;
}

.c1:hover > .icon,
.c1:focus > .icon {
  color: #3498db;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  display: inline-block;
  width: auto;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
    className="c0"
    width="auto"
  >
    <div
      className="popover__trigger"
      id="trigger"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <button
        className="c1 trigger"
        fontSize="14px"
        fontWeight="normal"
        size="SMALL"
        type="NEUTRAL"
      >
        Filter
        <div
          className="icon right-icon"
          style={
            Object {
              "transform": "translateX(6px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="2 2 20 20"
              width="1em"
            >
              <path
                d="M12 12.586l3.293-3.293a1 1 0 011.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L12 12.586z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>,
  <div
    style={
      Object {
        "background": "gainsboro",
        "height": 150,
        "opacity": 0.5,
        "position": "relative",
        "zIndex": 1,
      }
    }
  >
    Under
  </div>,
  <div
    style={
      Object {
        "background": "gainsboro",
        "height": 150,
        "opacity": 0.5,
        "position": "relative",
        "zIndex": 3,
      }
    }
  >
    Over
  </div>,
]
`;
